ParRnb.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.9 from ParRnb.y
-----------------------------------------------------------------------------

state 100 contains 1 shift/reduce conflicts.
state 191 contains 1 shift/reduce conflicts.

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	BTry -> L_BTry                                     (1)
	BCatch -> L_BCatch                                 (2)
	BLoop -> L_BLoop                                   (3)
	BCase -> L_BCase                                   (4)
	BAss -> L_BAss                                     (5)
	BPlus -> L_BPlus                                   (6)
	BMinus -> L_BMinus                                 (7)
	BDiv -> L_BDiv                                     (8)
	BMul -> L_BMul                                     (9)
	BUpTo -> L_BUpTo                                   (10)
	BMod -> L_BMod                                     (11)
	BAnd -> L_BAnd                                     (12)
	BOr -> L_BOr                                       (13)
	BNot -> L_BNot                                     (14)
	BLBra -> L_BLBra                                   (15)
	BLe -> L_BLe                                       (16)
	BLeEq -> L_BLeEq                                   (17)
	BGr -> L_BGr                                       (18)
	BGrEq -> L_BGrEq                                   (19)
	BNotEq -> L_BNotEq                                 (20)
	BEq -> L_BEq                                       (21)
	BBool -> L_BBool                                   (22)
	BReturn -> L_BReturn                               (23)
	BExit -> L_BExit                                   (24)
	BContinue -> L_BContinue                           (25)
	BExitOn -> L_BExitOn                               (26)
	BIdent -> L_BIdent                                 (27)
	BInteger -> L_BInteger                             (28)
	BReal -> L_BReal                                   (29)
	BChar -> L_BChar                                   (30)
	BString -> L_BString                               (31)
	Program -> ListDecl                                (32)
	Decl -> BIdent ':' Type ';'                        (33)
	Decl -> BIdent ':' Type BAss Expr ';'              (34)
	Decl -> 'const' BIdent ':' Type BAss Expr ';'      (35)
	Decl -> 'func' BIdent '(' ListParam ')' '->' '(' BIdent ':' Type ')' 'is' ListStmt 'end' BIdent   (36)
	Decl -> 'proc' BIdent '(' ListParam ')' 'is' ListStmt 'end' BIdent   (37)
	ListDecl ->                                        (38)
	ListDecl -> ListDecl Decl                          (39)
	Param -> BIdent ':' Mod Type                       (40)
	ListParam ->                                       (41)
	ListParam -> Param                                 (42)
	ListParam -> Param ',' ListParam                   (43)
	Mod -> 'ref'                                       (44)
	Mod ->                                             (45)
	Mod -> 'const'                                     (46)
	Mod -> 'res'                                       (47)
	Mod -> 'valres'                                    (48)
	Expr7 -> Val                                       (49)
	Expr7 -> BLBra ListExpr ']'                        (50)
	Expr7 -> 'create' 'Array' BLe Type BGr '(' Expr ')'   (51)
	Expr7 -> '§' LeftExpr                              (52)
	Expr7 -> LeftExpr                                  (53)
	Expr6 -> BIdent '(' ListExpr ')'                   (54)
	Expr6 -> '(' Expr ')'                              (55)
	Expr6 -> LeftExpr '++'                             (56)
	Expr6 -> LeftExpr '--'                             (57)
	Expr6 -> Expr7                                     (58)
	Expr5 -> Expr5 BUpTo Expr6                         (59)
	Expr5 -> Expr6                                     (60)
	Expr3 -> Expr3 BMul Expr4                          (61)
	Expr3 -> Expr3 BMod Expr4                          (62)
	Expr3 -> Expr3 BDiv Expr4                          (63)
	Expr3 -> BMinus Expr5                              (64)
	Expr3 -> BPlus Expr5                               (65)
	Expr3 -> Expr4                                     (66)
	Expr2 -> Expr2 BPlus Expr3                         (67)
	Expr2 -> Expr2 BMinus Expr3                        (68)
	Expr2 -> BNot Expr3                                (69)
	Expr2 -> Expr3                                     (70)
	Expr1 -> Expr1 BAnd Expr2                          (71)
	Expr1 -> Expr2                                     (72)
	Expr0 -> Expr0 BOr Expr1                           (73)
	Expr0 -> Expr0 Rel Expr1                           (74)
	Expr0 -> Expr1                                     (75)
	Expr -> Expr 'if' Expr 'else' Expr                 (76)
	Expr -> Expr0                                      (77)
	Expr4 -> Expr5                                     (78)
	ListExpr ->                                        (79)
	ListExpr -> Expr                                   (80)
	ListExpr -> Expr ',' ListExpr                      (81)
	Rel -> BLe                                         (82)
	Rel -> BLeEq                                       (83)
	Rel -> BGr                                         (84)
	Rel -> BGrEq                                       (85)
	Rel -> BNotEq                                      (86)
	Rel -> BEq                                         (87)
	Stmt -> LeftExpr BAss Expr ';'                     (88)
	Stmt -> 'if' Expr 'then' ListStmt ElseStmt 'end' 'if'   (89)
	Stmt -> BLoop ListStmt 'end' BLoop                 (90)
	Stmt -> LoopCmd ';'                                (91)
	Stmt -> 'for' '(' BIdent ':' BType BAss Expr Dir Expr ')' ListStmt 'end' 'for'   (92)
	Stmt -> BReturn ';'                                (93)
	Stmt -> BCase Expr 'of' Cases 'end' BCase          (94)
	Stmt -> 'local' ListStmt 'end' 'local'             (95)
	Stmt -> Decl                                       (96)
	Stmt -> Expr ';'                                   (97)
	Stmt -> BTry ListStmt BCatch ListStmt 'end' BCatch   (98)
	ElseStmt -> 'elseif' Expr 'then' ListStmt ElseStmt   (99)
	ElseStmt -> 'else' ListStmt                        (100)
	ElseStmt ->                                        (101)
	ListStmt ->                                        (102)
	ListStmt -> ListStmt Stmt                          (103)
	Dir -> '->'                                        (104)
	Dir -> '<-'                                        (105)
	LoopCmd -> BExitOn Expr                            (106)
	LoopCmd -> BExit                                   (107)
	LoopCmd -> BContinue                               (108)
	Cases ->                                           (109)
	Cases -> 'else' ListStmt                           (110)
	Cases -> Expr '->' ListStmt Cases                  (111)
	LeftExpr1 -> BIdent                                (112)
	LeftExpr1 -> LeftExpr1 Dim                         (113)
	LeftExpr1 -> '(' LeftExpr ')'                      (114)
	LeftExpr -> '°' LeftExpr                           (115)
	LeftExpr -> '++' LeftExpr                          (116)
	LeftExpr -> '--' LeftExpr                          (117)
	LeftExpr -> LeftExpr1                              (118)
	Dim -> BLBra Expr ']'                              (119)
	Val -> BInteger                                    (120)
	Val -> BReal                                       (121)
	Val -> BChar                                       (122)
	Val -> BBool                                       (123)
	Val -> BString                                     (124)
	Type -> BType                                      (125)
	Type -> 'Array' BLe Type BGr                       (126)
	Type -> 'Array' BLe Type BGr '(' Expr ')'          (127)
	Type -> '°' Type                                   (128)
	BType -> 'int'                                     (129)
	BType -> 'real'                                    (130)
	BType -> 'char'                                    (131)
	BType -> 'bool'                                    (132)
	BType -> 'string'                                  (133)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	'++'           { PT _ (TS _ 3) }
	','            { PT _ (TS _ 4) }
	'--'           { PT _ (TS _ 5) }
	'->'           { PT _ (TS _ 6) }
	':'            { PT _ (TS _ 7) }
	';'            { PT _ (TS _ 8) }
	'<-'           { PT _ (TS _ 9) }
	'Array'        { PT _ (TS _ 10) }
	']'            { PT _ (TS _ 11) }
	'bool'         { PT _ (TS _ 12) }
	'char'         { PT _ (TS _ 13) }
	'const'        { PT _ (TS _ 14) }
	'create'       { PT _ (TS _ 15) }
	'else'         { PT _ (TS _ 16) }
	'elseif'       { PT _ (TS _ 17) }
	'end'          { PT _ (TS _ 18) }
	'for'          { PT _ (TS _ 19) }
	'func'         { PT _ (TS _ 20) }
	'if'           { PT _ (TS _ 21) }
	'int'          { PT _ (TS _ 22) }
	'is'           { PT _ (TS _ 23) }
	'local'        { PT _ (TS _ 24) }
	'of'           { PT _ (TS _ 25) }
	'proc'         { PT _ (TS _ 26) }
	'real'         { PT _ (TS _ 27) }
	'ref'          { PT _ (TS _ 28) }
	'res'          { PT _ (TS _ 29) }
	'string'       { PT _ (TS _ 30) }
	'then'         { PT _ (TS _ 31) }
	'valres'       { PT _ (TS _ 32) }
	'§'            { PT _ (TS _ 33) }
	'°'            { PT _ (TS _ 34) }
	L_BTry         { PT _ (T_BTry _) }
	L_BCatch       { PT _ (T_BCatch _) }
	L_BLoop        { PT _ (T_BLoop _) }
	L_BCase        { PT _ (T_BCase _) }
	L_BAss         { PT _ (T_BAss _) }
	L_BPlus        { PT _ (T_BPlus _) }
	L_BMinus       { PT _ (T_BMinus _) }
	L_BDiv         { PT _ (T_BDiv _) }
	L_BMul         { PT _ (T_BMul _) }
	L_BUpTo        { PT _ (T_BUpTo _) }
	L_BMod         { PT _ (T_BMod _) }
	L_BAnd         { PT _ (T_BAnd _) }
	L_BOr          { PT _ (T_BOr _) }
	L_BNot         { PT _ (T_BNot _) }
	L_BLBra        { PT _ (T_BLBra _) }
	L_BLe          { PT _ (T_BLe _) }
	L_BLeEq        { PT _ (T_BLeEq _) }
	L_BGr          { PT _ (T_BGr _) }
	L_BGrEq        { PT _ (T_BGrEq _) }
	L_BNotEq       { PT _ (T_BNotEq _) }
	L_BEq          { PT _ (T_BEq _) }
	L_BBool        { PT _ (T_BBool _) }
	L_BReturn      { PT _ (T_BReturn _) }
	L_BExit        { PT _ (T_BExit _) }
	L_BContinue    { PT _ (T_BContinue _) }
	L_BExitOn      { PT _ (T_BExitOn _) }
	L_BIdent       { PT _ (T_BIdent _) }
	L_BInteger     { PT _ (T_BInteger _) }
	L_BReal        { PT _ (T_BReal _) }
	L_BChar        { PT _ (T_BChar _) }
	L_BString      { PT _ (T_BString _) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	BTry            rule  1
	BCatch          rule  2
	BLoop           rule  3
	BCase           rule  4
	BAss            rule  5
	BPlus           rule  6
	BMinus          rule  7
	BDiv            rule  8
	BMul            rule  9
	BUpTo           rule  10
	BMod            rule  11
	BAnd            rule  12
	BOr             rule  13
	BNot            rule  14
	BLBra           rule  15
	BLe             rule  16
	BLeEq           rule  17
	BGr             rule  18
	BGrEq           rule  19
	BNotEq          rule  20
	BEq             rule  21
	BBool           rule  22
	BReturn         rule  23
	BExit           rule  24
	BContinue       rule  25
	BExitOn         rule  26
	BIdent          rule  27
	BInteger        rule  28
	BReal           rule  29
	BChar           rule  30
	BString         rule  31
	Program         rule  32
	Decl            rules 33, 34, 35, 36, 37
	ListDecl        rules 38, 39
	Param           rule  40
	ListParam       rules 41, 42, 43
	Mod             rules 44, 45, 46, 47, 48
	Expr7           rules 49, 50, 51, 52, 53
	Expr6           rules 54, 55, 56, 57, 58
	Expr5           rules 59, 60
	Expr3           rules 61, 62, 63, 64, 65, 66
	Expr2           rules 67, 68, 69, 70
	Expr1           rules 71, 72
	Expr0           rules 73, 74, 75
	Expr            rules 76, 77
	Expr4           rule  78
	ListExpr        rules 79, 80, 81
	Rel             rules 82, 83, 84, 85, 86, 87
	Stmt            rules 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98
	ElseStmt        rules 99, 100, 101
	ListStmt        rules 102, 103
	Dir             rules 104, 105
	LoopCmd         rules 106, 107, 108
	Cases           rules 109, 110, 111
	LeftExpr1       rules 112, 113, 114
	LeftExpr        rules 115, 116, 117, 118
	Dim             rule  119
	Val             rules 120, 121, 122, 123, 124
	Type            rules 125, 126, 127, 128
	BType           rules 129, 130, 131, 132, 133

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'const'        reduce using rule 38
	'func'         reduce using rule 38
	'proc'         reduce using rule 38
	L_BIdent       reduce using rule 38
	%eof           reduce using rule 38

	Program        goto state 3
	ListDecl       goto state 4

State 1


	L_BTry         shift, and enter state 2


State 2

	BTry -> L_BTry .                                    (rule 1)

	'('            reduce using rule 1
	'++'           reduce using rule 1
	'--'           reduce using rule 1
	'const'        reduce using rule 1
	'create'       reduce using rule 1
	'for'          reduce using rule 1
	'func'         reduce using rule 1
	'if'           reduce using rule 1
	'local'        reduce using rule 1
	'proc'         reduce using rule 1
	'§'            reduce using rule 1
	'°'            reduce using rule 1
	L_BTry         reduce using rule 1
	L_BCatch       reduce using rule 1
	L_BLoop        reduce using rule 1
	L_BCase        reduce using rule 1
	L_BPlus        reduce using rule 1
	L_BMinus       reduce using rule 1
	L_BNot         reduce using rule 1
	L_BLBra        reduce using rule 1
	L_BBool        reduce using rule 1
	L_BReturn      reduce using rule 1
	L_BExit        reduce using rule 1
	L_BContinue    reduce using rule 1
	L_BExitOn      reduce using rule 1
	L_BIdent       reduce using rule 1
	L_BInteger     reduce using rule 1
	L_BReal        reduce using rule 1
	L_BChar        reduce using rule 1
	L_BString      reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDecl .                               (rule 32)
	ListDecl -> ListDecl . Decl                         (rule 39)

	'const'        shift, and enter state 7
	'func'         shift, and enter state 8
	'proc'         shift, and enter state 9
	L_BIdent       shift, and enter state 10
	%eof           reduce using rule 32

	BIdent         goto state 5
	Decl           goto state 6

State 5

	Decl -> BIdent . ':' Type ';'                       (rule 33)
	Decl -> BIdent . ':' Type BAss Expr ';'             (rule 34)

	':'            shift, and enter state 14


State 6

	ListDecl -> ListDecl Decl .                         (rule 39)

	'const'        reduce using rule 39
	'func'         reduce using rule 39
	'proc'         reduce using rule 39
	L_BIdent       reduce using rule 39
	%eof           reduce using rule 39


State 7

	Decl -> 'const' . BIdent ':' Type BAss Expr ';'     (rule 35)

	L_BIdent       shift, and enter state 10

	BIdent         goto state 13

State 8

	Decl -> 'func' . BIdent '(' ListParam ')' '->' '(' BIdent ':' Type ')' 'is' ListStmt 'end' BIdent    (rule 36)

	L_BIdent       shift, and enter state 10

	BIdent         goto state 12

State 9

	Decl -> 'proc' . BIdent '(' ListParam ')' 'is' ListStmt 'end' BIdent    (rule 37)

	L_BIdent       shift, and enter state 10

	BIdent         goto state 11

State 10

	BIdent -> L_BIdent .                                (rule 27)

	'('            reduce using rule 27
	')'            reduce using rule 27
	'++'           reduce using rule 27
	','            reduce using rule 27
	'--'           reduce using rule 27
	'->'           reduce using rule 27
	':'            reduce using rule 27
	';'            reduce using rule 27
	'<-'           reduce using rule 27
	']'            reduce using rule 27
	'const'        reduce using rule 27
	'create'       reduce using rule 27
	'else'         reduce using rule 27
	'elseif'       reduce using rule 27
	'end'          reduce using rule 27
	'for'          reduce using rule 27
	'func'         reduce using rule 27
	'if'           reduce using rule 27
	'local'        reduce using rule 27
	'of'           reduce using rule 27
	'proc'         reduce using rule 27
	'then'         reduce using rule 27
	'§'            reduce using rule 27
	'°'            reduce using rule 27
	L_BTry         reduce using rule 27
	L_BCatch       reduce using rule 27
	L_BLoop        reduce using rule 27
	L_BCase        reduce using rule 27
	L_BAss         reduce using rule 27
	L_BPlus        reduce using rule 27
	L_BMinus       reduce using rule 27
	L_BDiv         reduce using rule 27
	L_BMul         reduce using rule 27
	L_BUpTo        reduce using rule 27
	L_BMod         reduce using rule 27
	L_BAnd         reduce using rule 27
	L_BOr          reduce using rule 27
	L_BNot         reduce using rule 27
	L_BLBra        reduce using rule 27
	L_BLe          reduce using rule 27
	L_BLeEq        reduce using rule 27
	L_BGr          reduce using rule 27
	L_BGrEq        reduce using rule 27
	L_BNotEq       reduce using rule 27
	L_BEq          reduce using rule 27
	L_BBool        reduce using rule 27
	L_BReturn      reduce using rule 27
	L_BExit        reduce using rule 27
	L_BContinue    reduce using rule 27
	L_BExitOn      reduce using rule 27
	L_BIdent       reduce using rule 27
	L_BInteger     reduce using rule 27
	L_BReal        reduce using rule 27
	L_BChar        reduce using rule 27
	L_BString      reduce using rule 27
	%eof           reduce using rule 27


State 11

	Decl -> 'proc' BIdent . '(' ListParam ')' 'is' ListStmt 'end' BIdent    (rule 37)

	'('            shift, and enter state 26


State 12

	Decl -> 'func' BIdent . '(' ListParam ')' '->' '(' BIdent ':' Type ')' 'is' ListStmt 'end' BIdent    (rule 36)

	'('            shift, and enter state 25


State 13

	Decl -> 'const' BIdent . ':' Type BAss Expr ';'     (rule 35)

	':'            shift, and enter state 24


State 14

	Decl -> BIdent ':' . Type ';'                       (rule 33)
	Decl -> BIdent ':' . Type BAss Expr ';'             (rule 34)

	'Array'        shift, and enter state 17
	'bool'         shift, and enter state 18
	'char'         shift, and enter state 19
	'int'          shift, and enter state 20
	'real'         shift, and enter state 21
	'string'       shift, and enter state 22
	'°'            shift, and enter state 23

	Type           goto state 15
	BType          goto state 16

State 15

	Decl -> BIdent ':' Type . ';'                       (rule 33)
	Decl -> BIdent ':' Type . BAss Expr ';'             (rule 34)

	';'            shift, and enter state 36
	L_BAss         shift, and enter state 37

	BAss           goto state 35

State 16

	Type -> BType .                                     (rule 125)

	')'            reduce using rule 125
	','            reduce using rule 125
	';'            reduce using rule 125
	L_BAss         reduce using rule 125
	L_BGr          reduce using rule 125


State 17

	Type -> 'Array' . BLe Type BGr                      (rule 126)
	Type -> 'Array' . BLe Type BGr '(' Expr ')'         (rule 127)

	L_BLe          shift, and enter state 34

	BLe            goto state 33

State 18

	BType -> 'bool' .                                   (rule 132)

	')'            reduce using rule 132
	','            reduce using rule 132
	';'            reduce using rule 132
	L_BAss         reduce using rule 132
	L_BGr          reduce using rule 132


State 19

	BType -> 'char' .                                   (rule 131)

	')'            reduce using rule 131
	','            reduce using rule 131
	';'            reduce using rule 131
	L_BAss         reduce using rule 131
	L_BGr          reduce using rule 131


State 20

	BType -> 'int' .                                    (rule 129)

	')'            reduce using rule 129
	','            reduce using rule 129
	';'            reduce using rule 129
	L_BAss         reduce using rule 129
	L_BGr          reduce using rule 129


State 21

	BType -> 'real' .                                   (rule 130)

	')'            reduce using rule 130
	','            reduce using rule 130
	';'            reduce using rule 130
	L_BAss         reduce using rule 130
	L_BGr          reduce using rule 130


State 22

	BType -> 'string' .                                 (rule 133)

	')'            reduce using rule 133
	','            reduce using rule 133
	';'            reduce using rule 133
	L_BAss         reduce using rule 133
	L_BGr          reduce using rule 133


State 23

	Type -> '°' . Type                                  (rule 128)

	'Array'        shift, and enter state 17
	'bool'         shift, and enter state 18
	'char'         shift, and enter state 19
	'int'          shift, and enter state 20
	'real'         shift, and enter state 21
	'string'       shift, and enter state 22
	'°'            shift, and enter state 23

	Type           goto state 32
	BType          goto state 16

State 24

	Decl -> 'const' BIdent ':' . Type BAss Expr ';'     (rule 35)

	'Array'        shift, and enter state 17
	'bool'         shift, and enter state 18
	'char'         shift, and enter state 19
	'int'          shift, and enter state 20
	'real'         shift, and enter state 21
	'string'       shift, and enter state 22
	'°'            shift, and enter state 23

	Type           goto state 31
	BType          goto state 16

State 25

	Decl -> 'func' BIdent '(' . ListParam ')' '->' '(' BIdent ':' Type ')' 'is' ListStmt 'end' BIdent    (rule 36)

	')'            reduce using rule 41
	L_BIdent       shift, and enter state 10

	BIdent         goto state 27
	Param          goto state 28
	ListParam      goto state 30

State 26

	Decl -> 'proc' BIdent '(' . ListParam ')' 'is' ListStmt 'end' BIdent    (rule 37)

	')'            reduce using rule 41
	L_BIdent       shift, and enter state 10

	BIdent         goto state 27
	Param          goto state 28
	ListParam      goto state 29

State 27

	Param -> BIdent . ':' Mod Type                      (rule 40)

	':'            shift, and enter state 80


State 28

	ListParam -> Param .                                (rule 42)
	ListParam -> Param . ',' ListParam                  (rule 43)

	')'            reduce using rule 42
	','            shift, and enter state 79


State 29

	Decl -> 'proc' BIdent '(' ListParam . ')' 'is' ListStmt 'end' BIdent    (rule 37)

	')'            shift, and enter state 78


State 30

	Decl -> 'func' BIdent '(' ListParam . ')' '->' '(' BIdent ':' Type ')' 'is' ListStmt 'end' BIdent    (rule 36)

	')'            shift, and enter state 77


State 31

	Decl -> 'const' BIdent ':' Type . BAss Expr ';'     (rule 35)

	L_BAss         shift, and enter state 37

	BAss           goto state 76

State 32

	Type -> '°' Type .                                  (rule 128)

	')'            reduce using rule 128
	','            reduce using rule 128
	';'            reduce using rule 128
	L_BAss         reduce using rule 128
	L_BGr          reduce using rule 128


State 33

	Type -> 'Array' BLe . Type BGr                      (rule 126)
	Type -> 'Array' BLe . Type BGr '(' Expr ')'         (rule 127)

	'Array'        shift, and enter state 17
	'bool'         shift, and enter state 18
	'char'         shift, and enter state 19
	'int'          shift, and enter state 20
	'real'         shift, and enter state 21
	'string'       shift, and enter state 22
	'°'            shift, and enter state 23

	Type           goto state 75
	BType          goto state 16

State 34

	BLe -> L_BLe .                                      (rule 16)

	'('            reduce using rule 16
	'++'           reduce using rule 16
	'--'           reduce using rule 16
	'Array'        reduce using rule 16
	'bool'         reduce using rule 16
	'char'         reduce using rule 16
	'create'       reduce using rule 16
	'int'          reduce using rule 16
	'real'         reduce using rule 16
	'string'       reduce using rule 16
	'§'            reduce using rule 16
	'°'            reduce using rule 16
	L_BPlus        reduce using rule 16
	L_BMinus       reduce using rule 16
	L_BNot         reduce using rule 16
	L_BLBra        reduce using rule 16
	L_BBool        reduce using rule 16
	L_BIdent       reduce using rule 16
	L_BInteger     reduce using rule 16
	L_BReal        reduce using rule 16
	L_BChar        reduce using rule 16
	L_BString      reduce using rule 16


State 35

	Decl -> BIdent ':' Type BAss . Expr ';'             (rule 34)

	'('            shift, and enter state 60
	'++'           shift, and enter state 61
	'--'           shift, and enter state 62
	'create'       shift, and enter state 63
	'§'            shift, and enter state 64
	'°'            shift, and enter state 65
	L_BPlus        shift, and enter state 66
	L_BMinus       shift, and enter state 67
	L_BNot         shift, and enter state 68
	L_BLBra        shift, and enter state 69
	L_BBool        shift, and enter state 70
	L_BIdent       shift, and enter state 10
	L_BInteger     shift, and enter state 71
	L_BReal        shift, and enter state 72
	L_BChar        shift, and enter state 73
	L_BString      shift, and enter state 74

	BPlus          goto state 38
	BMinus         goto state 39
	BNot           goto state 40
	BLBra          goto state 41
	BBool          goto state 42
	BIdent         goto state 43
	BInteger       goto state 44
	BReal          goto state 45
	BChar          goto state 46
	BString        goto state 47
	Expr7          goto state 48
	Expr6          goto state 49
	Expr5          goto state 50
	Expr3          goto state 51
	Expr2          goto state 52
	Expr1          goto state 53
	Expr0          goto state 54
	Expr           goto state 55
	Expr4          goto state 56
	LeftExpr1      goto state 57
	LeftExpr       goto state 58
	Val            goto state 59

State 36

	Decl -> BIdent ':' Type ';' .                       (rule 33)

	'('            reduce using rule 33
	'++'           reduce using rule 33
	'--'           reduce using rule 33
	'const'        reduce using rule 33
	'create'       reduce using rule 33
	'else'         reduce using rule 33
	'elseif'       reduce using rule 33
	'end'          reduce using rule 33
	'for'          reduce using rule 33
	'func'         reduce using rule 33
	'if'           reduce using rule 33
	'local'        reduce using rule 33
	'proc'         reduce using rule 33
	'§'            reduce using rule 33
	'°'            reduce using rule 33
	L_BTry         reduce using rule 33
	L_BCatch       reduce using rule 33
	L_BLoop        reduce using rule 33
	L_BCase        reduce using rule 33
	L_BPlus        reduce using rule 33
	L_BMinus       reduce using rule 33
	L_BNot         reduce using rule 33
	L_BLBra        reduce using rule 33
	L_BBool        reduce using rule 33
	L_BReturn      reduce using rule 33
	L_BExit        reduce using rule 33
	L_BContinue    reduce using rule 33
	L_BExitOn      reduce using rule 33
	L_BIdent       reduce using rule 33
	L_BInteger     reduce using rule 33
	L_BReal        reduce using rule 33
	L_BChar        reduce using rule 33
	L_BString      reduce using rule 33
	%eof           reduce using rule 33


State 37

	BAss -> L_BAss .                                    (rule 5)

	'('            reduce using rule 5
	'++'           reduce using rule 5
	'--'           reduce using rule 5
	'create'       reduce using rule 5
	'§'            reduce using rule 5
	'°'            reduce using rule 5
	L_BPlus        reduce using rule 5
	L_BMinus       reduce using rule 5
	L_BNot         reduce using rule 5
	L_BLBra        reduce using rule 5
	L_BBool        reduce using rule 5
	L_BIdent       reduce using rule 5
	L_BInteger     reduce using rule 5
	L_BReal        reduce using rule 5
	L_BChar        reduce using rule 5
	L_BString      reduce using rule 5


State 38

	Expr3 -> BPlus . Expr5                              (rule 65)

	'('            shift, and enter state 60
	'++'           shift, and enter state 61
	'--'           shift, and enter state 62
	'create'       shift, and enter state 63
	'§'            shift, and enter state 64
	'°'            shift, and enter state 65
	L_BLBra        shift, and enter state 69
	L_BBool        shift, and enter state 70
	L_BIdent       shift, and enter state 10
	L_BInteger     shift, and enter state 71
	L_BReal        shift, and enter state 72
	L_BChar        shift, and enter state 73
	L_BString      shift, and enter state 74

	BLBra          goto state 41
	BBool          goto state 42
	BIdent         goto state 43
	BInteger       goto state 44
	BReal          goto state 45
	BChar          goto state 46
	BString        goto state 47
	Expr7          goto state 48
	Expr6          goto state 49
	Expr5          goto state 137
	LeftExpr1      goto state 57
	LeftExpr       goto state 58
	Val            goto state 59

State 39

	Expr3 -> BMinus . Expr5                             (rule 64)

	'('            shift, and enter state 60
	'++'           shift, and enter state 61
	'--'           shift, and enter state 62
	'create'       shift, and enter state 63
	'§'            shift, and enter state 64
	'°'            shift, and enter state 65
	L_BLBra        shift, and enter state 69
	L_BBool        shift, and enter state 70
	L_BIdent       shift, and enter state 10
	L_BInteger     shift, and enter state 71
	L_BReal        shift, and enter state 72
	L_BChar        shift, and enter state 73
	L_BString      shift, and enter state 74

	BLBra          goto state 41
	BBool          goto state 42
	BIdent         goto state 43
	BInteger       goto state 44
	BReal          goto state 45
	BChar          goto state 46
	BString        goto state 47
	Expr7          goto state 48
	Expr6          goto state 49
	Expr5          goto state 136
	LeftExpr1      goto state 57
	LeftExpr       goto state 58
	Val            goto state 59

State 40

	Expr2 -> BNot . Expr3                               (rule 69)

	'('            shift, and enter state 60
	'++'           shift, and enter state 61
	'--'           shift, and enter state 62
	'create'       shift, and enter state 63
	'§'            shift, and enter state 64
	'°'            shift, and enter state 65
	L_BPlus        shift, and enter state 66
	L_BMinus       shift, and enter state 67
	L_BLBra        shift, and enter state 69
	L_BBool        shift, and enter state 70
	L_BIdent       shift, and enter state 10
	L_BInteger     shift, and enter state 71
	L_BReal        shift, and enter state 72
	L_BChar        shift, and enter state 73
	L_BString      shift, and enter state 74

	BPlus          goto state 38
	BMinus         goto state 39
	BLBra          goto state 41
	BBool          goto state 42
	BIdent         goto state 43
	BInteger       goto state 44
	BReal          goto state 45
	BChar          goto state 46
	BString        goto state 47
	Expr7          goto state 48
	Expr6          goto state 49
	Expr5          goto state 50
	Expr3          goto state 135
	Expr4          goto state 56
	LeftExpr1      goto state 57
	LeftExpr       goto state 58
	Val            goto state 59

State 41

	Expr7 -> BLBra . ListExpr ']'                       (rule 50)

	'('            shift, and enter state 60
	'++'           shift, and enter state 61
	'--'           shift, and enter state 62
	']'            reduce using rule 79
	'create'       shift, and enter state 63
	'§'            shift, and enter state 64
	'°'            shift, and enter state 65
	L_BPlus        shift, and enter state 66
	L_BMinus       shift, and enter state 67
	L_BNot         shift, and enter state 68
	L_BLBra        shift, and enter state 69
	L_BBool        shift, and enter state 70
	L_BIdent       shift, and enter state 10
	L_BInteger     shift, and enter state 71
	L_BReal        shift, and enter state 72
	L_BChar        shift, and enter state 73
	L_BString      shift, and enter state 74

	BPlus          goto state 38
	BMinus         goto state 39
	BNot           goto state 40
	BLBra          goto state 41
	BBool          goto state 42
	BIdent         goto state 43
	BInteger       goto state 44
	BReal          goto state 45
	BChar          goto state 46
	BString        goto state 47
	Expr7          goto state 48
	Expr6          goto state 49
	Expr5          goto state 50
	Expr3          goto state 51
	Expr2          goto state 52
	Expr1          goto state 53
	Expr0          goto state 54
	Expr           goto state 133
	Expr4          goto state 56
	ListExpr       goto state 134
	LeftExpr1      goto state 57
	LeftExpr       goto state 58
	Val            goto state 59

State 42

	Val -> BBool .                                      (rule 123)

	')'            reduce using rule 123
	','            reduce using rule 123
	'->'           reduce using rule 123
	';'            reduce using rule 123
	'<-'           reduce using rule 123
	']'            reduce using rule 123
	'else'         reduce using rule 123
	'if'           reduce using rule 123
	'of'           reduce using rule 123
	'then'         reduce using rule 123
	L_BPlus        reduce using rule 123
	L_BMinus       reduce using rule 123
	L_BDiv         reduce using rule 123
	L_BMul         reduce using rule 123
	L_BUpTo        reduce using rule 123
	L_BMod         reduce using rule 123
	L_BAnd         reduce using rule 123
	L_BOr          reduce using rule 123
	L_BLe          reduce using rule 123
	L_BLeEq        reduce using rule 123
	L_BGr          reduce using rule 123
	L_BGrEq        reduce using rule 123
	L_BNotEq       reduce using rule 123
	L_BEq          reduce using rule 123


State 43

	Expr6 -> BIdent . '(' ListExpr ')'                  (rule 54)
	LeftExpr1 -> BIdent .                               (rule 112)

	'('            shift, and enter state 132
	')'            reduce using rule 112
	'++'           reduce using rule 112
	','            reduce using rule 112
	'--'           reduce using rule 112
	'->'           reduce using rule 112
	';'            reduce using rule 112
	'<-'           reduce using rule 112
	']'            reduce using rule 112
	'else'         reduce using rule 112
	'if'           reduce using rule 112
	'of'           reduce using rule 112
	'then'         reduce using rule 112
	L_BPlus        reduce using rule 112
	L_BMinus       reduce using rule 112
	L_BDiv         reduce using rule 112
	L_BMul         reduce using rule 112
	L_BUpTo        reduce using rule 112
	L_BMod         reduce using rule 112
	L_BAnd         reduce using rule 112
	L_BOr          reduce using rule 112
	L_BLBra        reduce using rule 112
	L_BLe          reduce using rule 112
	L_BLeEq        reduce using rule 112
	L_BGr          reduce using rule 112
	L_BGrEq        reduce using rule 112
	L_BNotEq       reduce using rule 112
	L_BEq          reduce using rule 112


State 44

	Val -> BInteger .                                   (rule 120)
